Fixed blog list top spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -536,7 +536,7 @@ iframe {margin: 24px 0!important;}
 .note-entry {
   border-top: 1px solid var(--light-border-color);
   margin: 0;
-  padding: calc(1.25 * var(--line-height)) 0;
+  padding: 20px 0;
   h1 {
     font-family: $heading-typeface;
     margin: 20px 0;
